--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@capacitor/status-bar": "7.0.1",
     "@ionic/angular": "^8.0.0",
     "@ionic/storage-angular": "^4.0.0",
+    "event-source-polyfill": "^1.0.31",
     "ionicons": "^7.0.0",
     "jwt-decode": "^4.0.0",
     "mongodb": "^6.16.0",
@@ -49,6 +50,7 @@
     "@angular/language-service": "^19.0.0",
     "@capacitor/cli": "7.2.0",
     "@ionic/angular-toolkit": "^12.0.0",
+    "@types/event-source-polyfill": "^1.0.5",
     "@types/jasmine": "~5.1.0",
     "@types/jwt-decode": "^2.2.1",
     "@types/mongodb": "^4.0.6",
