--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "event-source-polyfill": "^1.0.31",
     "ionicons": "^7.0.0",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
     "mongodb": "^6.16.0",
     "node": "^23.11.0",
     "rxjs": "~7.8.0",
@@ -54,6 +55,7 @@
     "@types/event-source-polyfill": "^1.0.5",
     "@types/jasmine": "~5.1.0",
     "@types/jwt-decode": "^2.2.1",
+    "@types/leaflet": "^1.9.17",
     "@types/mongodb": "^4.0.6",
     "@types/swiper": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
